import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

description = 'Sirix CLI.'

apply plugin: 'kotlin'

test {
    useJUnitPlatform()
    jvmArgs = [
        '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens', 'java.base/java.nio=ALL-UNNAMED',
        '--add-modules', 'jdk.incubator.vector',
        '--enable-native-access=ALL-UNNAMED'
    ]
}


tasks.withType(KotlinCompile).all {
    kotlinOptions {
        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
    }
}

kotlin {
    jvmToolchain(25)
}

dependencies {
    implementation project(':sirix-core')
    implementation project(':sirix-query')

    implementation implLibraries.kotlinStdlib
    implementation implLibraries.kotlinStdlibJdk8
    implementation implLibraries.kotlinxCli

    testImplementation testLibraries.junitJupiterApi
    testImplementation testLibraries.junitJupiterEngine
    testImplementation testLibraries.junitVintageEngine
    testImplementation testLibraries.junitPlatformLauncher
    testImplementation testLibraries.junitJupiterParams
    testImplementation testLibraries.jsonassert
}